header overflow fixed

--- a/css/aeviator.css
+++ b/css/aeviator.css
@@ -340,7 +340,7 @@ ul.level1 {
 
 .content_wrapper{
   margin-left: 140px;
-  /*overflow: hidden;*/
+  overflow: hidden;
 
 }
 /*top nav*/
